--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,3 +1,28 @@
 .toggle-btn {
     margin-bottom: 35px;
 }
+
+.error-block {
+    position: absolute;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    top: 50vh;
+    left: 50vw;
+    transform: translate(-50%, -50%);
+}
+
+.error-block img {
+    max-width: 100vw;
+    max-height: 80vh;
+    margin-bottom: 30px;
+}
+
+.error-block span {
+    font-size: 3vh;
+    text-transform: uppercase;
+    color: #fff;
+}
