--- a/public/index.css
+++ b/public/index.css
@@ -6,8 +6,11 @@
 }
 body {
     overflow-x: hidden;
-    background: url('img/gotBackground.jpg') center center no-repeat;
-    background-size: cover;
     font-size: 16px;
     height: 100vh;
+}
+
+#root {
+    background: url('img/gotBackground.jpg') center center no-repeat;
+    background-size: cover;
 }
