--- a/public/index.css
+++ b/public/index.css
@@ -6,11 +6,9 @@
 }
 body {
     overflow-x: hidden;
-    font-size: 16px;
-    height: 100vh;
-}
-
-#root {
     background: url('img/gotBackground.jpg') center center no-repeat;
     background-size: cover;
+    font-size: 16px;
+    height: 100%;
+    background-color: #353535;
 }
