--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -20,3 +20,11 @@
     text-transform: uppercase;
     color: #fff;
 }
+
+.app {
+    overflow-x: hidden;
+    background: url('./gotBackground.jpg') center center no-repeat;
+    background-size: cover;
+    font-size: 16px;
+    height: 100%;
+}
